--- a/templates/variations-section.html
+++ b/templates/variations-section.html
@@ -1,6 +1,6 @@
 <h3>Variations</h3>
 <ul>
-  {{#each data.variations as |variation key|}}
+  {{#each system.variations as |variation key|}}
   <li class="item flexrow list-item" data-item-id="{{variation._id}}" data-item-type="variations">
     <span class="competence-label"><a class="variation-name">{{variation.name}}</a></span>
     <div class="item-controls">
