--- a/templates/item-spacecraftweaponvariation-sheet.html
+++ b/templates/item-spacecraftweaponvariation-sheet.html
@@ -11,10 +11,10 @@
 
         <div class="tab" data-group="primary">
 
-          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=data.stats isbase=true title="Variation Stats" header=true}}
+          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=system.stats isbase=true title="Variation Stats" header=true}}
 
           <label class="generic-label">Description</label>
-          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
+          {{editor system.description target="system.description" button=true owner=owner editable=editable}}
         </div>
 
     </section>
