--- a/templates/item-weapon-sheet.html
+++ b/templates/item-weapon-sheet.html
@@ -12,26 +12,21 @@
         <div class="tab" data-group="primary">
           <span class="flexrow">
             <h3>Type</h3>
-              <select class="competence-base flexrow" type="text" name="data.type" value="{{data.type}}" data-dtype="String">
-                {{#select data.type}}
-                <option value="analytical">Analytical</option>
-                <option value="chemical">Chemical</option>
-                <option value="combatcomputer">Combat Computer</option>
-                <option value="disruptor">Disruptor</option>
+              <select class="competence-base flexrow" type="text" name="system.type" value="{{system.type}}" data-dtype="String">
+                {{#select system.type}}
                 <option value="gun">Gun</option>
                 <option value="shell">Shell</option>
-                <option value="impairment">Impairment</option>
                 <option value="melee">Melee</option>
-                <option value="psionic">Psionic</option>
-                <option value="thrown">Thrown</option>
+                <option value="companion">Companion</option>
+                <option value="special">Special</option>
                 {{/select}}
               </select> 
           </span>
 
           <span class="flexrow">
             <h3>Default Skill</h3>
-              <select class="competence-base flexrow" type="text" name="data.defaultskill" value="{{data.defaultskill}}" data-dtype="String">
-                {{#select data.defaultskill}}
+              <select class="competence-base flexrow" type="text" name="system.defaultskill" value="{{system.defaultskill}}" data-dtype="String">
+                {{#select system.defaultskill}}
                   {{#each combatSkills as |skill key|}}
                   <option value="{{skill.name}}">{{skill.name}}</option>
                   {{/each}}
@@ -49,16 +44,16 @@
               <ul>
                 {{#each keywordArray as |keyword key|}}
                 <li class="item-list item flexrow stack-left">
-                  <input type="checkbox" name="data.keywords.{{keyword.key}}.flag" {{checked keyword.flag}}/>
+                  <input type="checkbox" name="system.keywords.{{keyword.key}}.flag" {{checked keyword.flag}}/>
                   <label class="generic-label keyword-label packed-left">{{keyword.label}}</label>
                   {{#if keyword.X}}
-                    <input type="text" class="input-numeric-short padd-right" name="data.keywords.{{keyword.key}}.X" value="{{keyword.X}}" data-dtype="String"/>
+                    <input type="text" class="input-numeric-short padd-right" name="system.keywords.{{keyword.key}}.X" value="{{keyword.X}}" data-dtype="String"/>
                   {{/if}}
                   {{#if keyword.Y}}
                     {{#if keyword.labelY}}
                     <label class="generic-label keyword-label  packed-left">{{keyword.labelY}}</label>
                     {{/if}}
-                    <input type="text" class="input-numeric-short padd-right" name="data.keywords.{{keyword.key}}.Y" value="{{keyword.Y}}" data-dtype="String"/>
+                    <input type="text" class="input-numeric-short padd-right" name="system.keywords.{{keyword.key}}.Y" value="{{keyword.Y}}" data-dtype="String"/>
                   {{/if}}
                 </li>
                 {{/each}}
@@ -68,17 +63,17 @@
           </div>
 
           <h3>Stats</h3>
-          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=data.statstotal isfinal=true title="Final stats" header=true}}
-          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=data.stats  isbase=true title="Weapon stats"}}
-          {{#each data.variations as |variation key|}}
-          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=variation.data.stats  isfinal=false title="Variation" subtitle=variation.name}}
+          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=system.statstotal isfinal=true title="Final stats" header=true}}
+          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=system.stats  isbase=true title="Weapon stats"}}
+          {{#each system.variations as |variation key|}}
+          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=variation.system.stats  isfinal=false title="Variation" subtitle=variation.name}}
           {{/each}}
-          {{#each data.modifications as |modification key|}}
-          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=modification.data.stats  isfinal=false title="Modification" subtitle=modification.name}}
+          {{#each system.modifications as |modification key|}}
+          {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=modification.system.stats  isfinal=false title="Modification" subtitle=modification.name}}
           {{/each}}
         
           <h3>Description</h3>
-          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
+          {{editor system.description target="system.description" button=true owner=owner editable=editable}}
         </div>
 
     </section>
