--- a/templates/modifications-section.html
+++ b/templates/modifications-section.html
@@ -1,6 +1,6 @@
 <h3>Modifications</h3>
 <ul>
-  {{#each data.modifications as |modification key|}}
+  {{#each system.modifications as |modification key|}}
   <li class="item flexrow list-item" data-item-id="{{modification._id}}" data-item-type="modifications">
     <span class="competence-label"><a class="modification-name">{{modification.name}}</a></span>
     <div class="item-controls">
