--- a/templates/partial-skill-list-header.html
+++ b/templates/partial-skill-list-header.html
@@ -2,7 +2,7 @@
   <span class="generic-label">&nbsp;</span>
   <span class="generic-label">Name</span>
   <span class="generic-label">Trained</span>
-  <span class="generic-label">Bonus</span>
+  <span class="generic-label">Attribute Bonus</span>
   <span class="generic-label">Total</span>
   <span class="generic-label">Trait</span>
   <span class="generic-label">Edit</span>
