--- a/templates/spacecraft-sheet.html
+++ b/templates/spacecraft-sheet.html
@@ -33,10 +33,10 @@
               
               <span class="generic-label"><h3>Attributes</h3></span>
               <ul>
-                {{#each data.attributes as |attr key|}}
+                {{#each system.attributes as |attr key|}}
                 <li class="item flexrow list-item" data-attr-key="{{key}}" data-item-id="{{attr.traitId}}">
                   <span class="stat-label flexrow tooltip tooltip-nobottom" name="{{key}}"><a class="carac-roll">{{attr.label}}</a></span>
-                  <select class="carac-base flexrow" type="text" name="data.attributes.{{key}}.current" value="{{attr.current}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}>
+                  <select class="carac-base flexrow" type="text" name="system.attributes.{{key}}.current" value="{{attr.current}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}>
                     {{#select attr.current}}
                     <option value="-5">-5</option>
                     <option value="-4">-4</option>
@@ -53,7 +53,7 @@
                     {{/select}}
                   </select> 
                   &nbsp;/&nbsp;
-                  <select class="carac-base flexrow" type="text" name="data.attributes.{{key}}.value" value="{{attr.value}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}>
+                  <select class="carac-base flexrow" type="text" name="system.attributes.{{key}}.value" value="{{attr.value}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}>
                     {{#select attr.value}}
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -76,15 +76,15 @@
 
             <div class="">        
               <span class="generic-label"><h3>Size : </h3>
-              <input type="text" name="data.size.value" value="{{data.size.value}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}/>
+              <input type="text" name="system.size.value" value="{{system.size.value}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}/>
               </span>
 
               <span class="generic-label"><h3>Build : </h3>
-                <input type="text" name="data.build" value="{{data.build}}" data-dtype="String" {{#unless @root.editScore}}disabled{{/unless}}/>
+                <input type="text" name="system.build" value="{{system.build}}" data-dtype="String" {{#unless @root.editScore}}disabled{{/unless}}/>
               </span>
 
               <span class="generic-label"><h3>Influence : </h3>
-                <input type="text" name="data.influence" value="{{data.influence}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}/>
+                <input type="text" name="system.influence" value="{{system.influence}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}/>
               </span>
 
               <span class="generic-label"><h3>Other Stats</h3></span>
@@ -96,16 +96,16 @@
                   <span class="stat-label" name="{{key}}">Current</span>
                 </li>
                 </li>
-                  {{#each data.stats as |stat key|}}
+                  {{#each system.stats as |stat key|}}
                   <li class="item flexrow list-item stack-left" data-attr-key="{{key}}" data-item-id="{{stat.traitId}}">
                     <span class="stat-label " name="{{key}}">{{stat.label}}</span>
                     {{#if stat.bonus}}
-                    <input type="text" class="input-numeric-short padd-right" name="data.stats.{{key}}.bonus" value="{{stat.bonus}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}/>
+                    <input type="text" class="input-numeric-short padd-right" name="system.stats.{{key}}.bonus" value="{{stat.bonus}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}/>
                     {{/if}}
                     {{#if stat.max}}
                     <span class="stat-label padd-left" name="{{key}}"> {{stat.max}}</span>
                     {{/if}}
-                    <input type="text" class="input-numeric-short padd-right" name="data.stats.{{key}}.value" value="{{stat.value}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}/>
+                    <input type="text" class="input-numeric-short padd-right" name="system.stats.{{key}}.value" value="{{stat.value}}" data-dtype="Number" {{#unless @root.editScore}}disabled{{/unless}}/>
                   </li>
                   {{/each}}
                 </ul>    
@@ -120,15 +120,15 @@
         <div class="flexcol">
 
           <div class="">     
-            {{#each data.fight as |fight key|}}   
+            {{#each system.fight as |fight key|}}   
             <div class="flexrow stack-left">     
               <span class="stat-label packed-left padd-right"><strong>{{fight.label}}</strong></span>
               {{#if fight.valueonly}}
-              <input type="text" class="input-numeric-short padd-right"  name="data.fight.{{key}}.value" value="{{fight.value}}" data-dtype="Number"/>
+              <input type="text" class="input-numeric-short padd-right"  name="system.fight.{{key}}.value" value="{{fight.value}}" data-dtype="Number"/>
               {{else}}
               <span class="stat-label padd-right padd-left packed-left">Base : {{fight.base}}</span>
               <span class="stat-label padd-left padd-right packed-left">Bonus :</span>
-              <input type="text" class="input-numeric-short padd-right"  name="data.fight.{{key}}.bonus" value="{{fight.bonus}}" data-dtype="Number"/>
+              <input type="text" class="input-numeric-short padd-right"  name="system.fight.{{key}}.bonus" value="{{fight.bonus}}" data-dtype="Number"/>
               <span class="stat-label padd-left padd-right packed-left">Total : {{fight.total}}</span>
               {{/if}}
             </div>         
@@ -137,17 +137,17 @@
               <li class="item flexrow list-item stack-left">
                 <span class="stat-label padd-left padd-right packed-left">{{derivated.label}}</span>
                 {{#if derivated.valueonly}}
-                <input type="text" class="input-numeric-short padd-right"  name="data.fight.{{key}}.derivated.{{keydev}}.value" value="{{derivated.value}}" data-dtype="Number"/>
+                <input type="text" class="input-numeric-short padd-right"  name="system.fight.{{key}}.derivated.{{keydev}}.value" value="{{derivated.value}}" data-dtype="Number"/>
                 {{else}}
                 <span class="stat-label padd-left padd-right packed-left">Bonus :</span>
-                <input type="text" class="input-numeric-short padd-right"  name="data.fight.{{key}}.derivated.{{keydev}}.bonus" value="{{derivated.bonus}}" data-dtype="Number"/>
+                <input type="text" class="input-numeric-short padd-right"  name="system.fight.{{key}}.derivated.{{keydev}}.bonus" value="{{derivated.bonus}}" data-dtype="Number"/>
                 <span class="stat-label padd-left padd-right packed-left">Total : {{derivated.total}}</span>
                 {{/if}}
               </li>
               {{/each}}
-            </ul>    
+            </ul>
             <hr>
-            {{/each}}            
+            {{/each}}
           </div>
 
           <span class="generic-label"><h3>Weapons</h3></span>
@@ -157,13 +157,13 @@
               <img class="sheet-competence-img" src="{{weapon.img}}"/>
               <span class="stat-label spacecraft-weapon-label flexrow"><a name="{{weapon.name}}">{{weapon.name}}</a></span>
               <div class="item-controls">
-                <a class="item-control item-equip" title="Worn">{{#if weapon.data.data.equipped}}<i class="fas fa-circle"></i>{{else}}<i class="fas fa-genderless"></i>{{/if}}</a>
+                <a class="item-control item-equip" title="Worn">{{#if weapon.system.equipped}}<i class="fas fa-circle"></i>{{else}}<i class="fas fa-genderless"></i>{{/if}}</a>
                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
               </div>
             </li>
             <li>
-              {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=weapon.data.data.statstotal isfinal=false header=true}}
+              {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=weapon.system.statstotal isfinal=false header=true}}
             </li>
             {{/each}}                
           </ul>          
@@ -177,7 +177,7 @@
           <ul class="item-list alternate-list">
             <li class="item flexrow list-item">
               <span class="equipement-label">Name</span>
-              <span class="equipement-label">Tradebox</span>
+              <span class="equipement-label">Type</span>
               <span class="equipement-label">Cargo Space</span>
               <div class="item-controls">
                 <span class="equipement-label">&nbsp;</span>
@@ -188,14 +188,17 @@
             <li class="item flexrow list-item" data-item-id="{{good.id}}">
               <img class="sheet-competence-img" src="{{good.img}}"/>
               <span class="equipement-label">{{good.name}}</span>
-              <span class="equipement-label">{{good.data.data.tradebox}}</span>
-              <span class="equipement-label">{{good.cargoSpace}}</span>
+              <span class="equipement-label">{{good.system.type}}</span>
+              <span class="equipement-label">{{good.system.cargoSpace}}</span>
               <div class="item-controls">
                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
               </div>
-            </li>                  
+            </li>
           {{/each}}
+          <ul>
+            <li><span class="stat-label">Cargo Space Used: {{cargoSpaceUsed}} /</span></li>
+              {{!-- <input type="text" class="input-numeric-short padd-right"  name="cargoSpaceUsed" value="{{cargoSpaceUsed}}" data-dtype="Number"/> --}}
           </ul>
       </div>
 
@@ -223,7 +226,7 @@
             <li class="item flexrow list-item" data-item-id="{{trait.id}}">
               <img class="sheet-competence-img" src="{{trait.img}}"/>
               <span class="competence-label">{{trait.name}}</span>
-              <span class="competence-label">{{trait.data.data.type}}</span>
+              <span class="competence-label">{{trait.system.type}}</span>
               <div class="item-controls">
                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -254,12 +257,12 @@
         <article class="flexcol">
           <h3>Description : </h3>
           <div class="form-group editor">
-            {{editor system.description target="data.description" button=true owner=owner editable=editable}}
+            {{editor system.description target="system.description" button=true owner=owner editable=editable}}
           </div>
           <hr>
           <h3>Notes : </h3>
           <div class="form-group editor">
-            {{editor system.notes target="data.notes" button=true owner=owner editable=editable}}
+            {{editor system.notes target="system.notes" button=true owner=owner editable=editable}}
           </div>
           <hr>
           {{>"systems/foundry-fe2/templates/editor-notes-gm.html"}}
